Fix position on mobile

--- a/react/categoryMenu.css
+++ b/react/categoryMenu.css
@@ -6,10 +6,6 @@
   left: -0.5rem;
 }
 
-.mobile {
-  height: calc(100% - 2.625rem);
-}
-
 @media only screen and (max-width: 40rem) {
   body.sidebarOpen {
       overflow-y: hidden;
